# legged_control_tail

./: .gitignore  README.md
legged_controllers/: CMakeLists.txt
legged_controllers/config/: joy.yaml
legged_controllers/config/a1/: gait.info  reference.info
legged_controllers/config/go1/: gait.info  reference.info  task.info
legged_controllers/config/go1 copy/: gait.info  task.info
legged_controllers/config/sirius_belt/: gait.info  task.info
legged_controllers/config/sirius_mid/: reference.info  task.info
legged_controllers/config/sirius_mini/: gait.info  reference.info  task.info
legged_controllers/include/legged_controllers/: LeggedController.h
legged_controllers/launch/: joy_teleop.launch  load_controller.launch  load_controller_go1.launch  load_controller_tail.launch  zero_shot_start.launch
legged_controllers/src/: GaitPublisher.cpp  LeggedController.cpp  TargetPublisher.cpp  TargetTrajectoriesPublisher.cpp
legged_examples/legged_unitree/go1_description/launch/: empty_world.launch
legged_examples/legged_unitree/go1_description/urdf/: go1.urdf
legged_examples/legged_unitree/legged_unitree_description/urdf/a1/: a1.urdf
legged_examples/legged_unitree/legged_unitree_hw/src/: UnitreeHW.cpp
legged_examples/legged_unitree/legged_unitree_hw_free/: CMakeLists.txt  package.xml
legged_examples/legged_unitree/legged_unitree_hw_free/config/: go1.yaml
legged_examples/legged_unitree/legged_unitree_hw_free/include/legged_unitree_hw_free/: UnitreeHW.h
legged_examples/legged_unitree/legged_unitree_hw_free/launch/: go1.launch  legged_unitree_hw_free.launch
legged_examples/legged_unitree/legged_unitree_hw_free/src/: UnitreeHW.cpp  legged_unitree_hw.cpp
legged_examples/mini_tail/mini_tail_description/: CMakeLists.txt  package.xml
legged_examples/mini_tail/mini_tail_description/launch/: empty_world.launch
legged_examples/mini_tail/mini_tail_description/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL
legged_examples/mini_tail/mini_tail_description/urdf/: sirius_mini.urdf
legged_examples/sirius_robot/legged_sirius_description/: CMakeLists.txt  package.xml
legged_examples/sirius_robot/legged_sirius_description/launch/: empty_world.launch  legged_robot_rviz.launch
legged_examples/sirius_robot/legged_sirius_description/meshes/sirius_belt/: calf.STL  hip.STL  thigh.STL  thigh_mirror.STL
legged_examples/sirius_robot/legged_sirius_description/meshes/sirius_mid/: calf.STL  hip.STL  thigh.STL  thigh_mirror.STL
legged_examples/sirius_robot/legged_sirius_description/rviz/: sirius_mini.rviz
legged_examples/sirius_robot/legged_sirius_description/urdf/: robot.xacro
legged_examples/sirius_robot/legged_sirius_description/urdf/common/: leg.xacro
legged_examples/sirius_robot/legged_sirius_description/urdf/sirius_belt/: const.xacro
legged_examples/sirius_robot/legged_sirius_description/urdf/sirius_mid/: const.xacro
legged_examples/sirius_robot/legged_sirius_description/urdf/sirius_mini/: const.xacro
legged_examples/sirius_robot/legged_sirius_hw/: CMakeLists.txt  package.xml
legged_examples/sirius_robot/legged_sirius_hw/config/: sirius_belt.yaml  sirius_mid.yaml  sirius_mid_with_arm.yaml
legged_examples/sirius_robot/legged_sirius_hw/include/legged_sirius_hw/: SiriusArmHW.h  SiriusHW.h  gamepad.h  rt_imu.h  rt_usb_interface.h
legged_examples/sirius_robot/legged_sirius_hw/launch/: legged_sirius_hw.launch  legged_sirius_hw_test.launch
legged_examples/sirius_robot/legged_sirius_hw/lcm-types/: ros_lowcmd_lcmt.lcm  ros_lowstate_lcmt.lcm
legged_examples/sirius_robot/legged_sirius_hw/src/: SiriusArmHW.cpp  SiriusHW.cpp  gamepad.cpp  legged_sirius_arm_hw.cpp  legged_sirius_hw.cpp  rt_imu.cpp  rt_usb_interface.cpp
legged_gazebo/config/: default.yaml  sirius_config.yaml
legged_gazebo/src/: LeggedHWSim.cpp
legged_hw/src/: LeggedHWLoop.cpp
legged_interface/: CMakeLists.txt
legged_interface/include/legged_interface/: LeggedInterface.h
legged_interface/include/legged_interface/constraint/: ArmPositionConstraint.h  FootPositionConstraint.h  TailPositionConstraint.h  ZeroForceConstraint_tail.h
legged_interface/src/: LeggedInterface.cpp  LeggedRobotPreComputation.cpp
legged_interface/src/constraint/: ArmPositionConstraint.cpp  FootPositionConstraint.cpp  TailPositionConstraint.cpp  ZeroForceConstraint_tail.cpp
