cmake_minimum_required(VERSION 3.0.2)
project(legged_unitree_hw_free)

## Compile as C++11, supported in ROS Kinetic and newer
add_compile_options(-std=c++2a)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED
        COMPONENTS
        roscpp
        legged_hw
        fdsc_utils
)

catkin_package(
        INCLUDE_DIRS
        include
        CATKIN_DEPENDS
        roscpp
        legged_hw
        fdsc_utils
)
include_directories(
        include

        ${catkin_INCLUDE_DIRS}
)

set(SOURCE 
        src/legged_unitree_hw.cpp 
        src/UnitreeHW.cpp)

add_executable(${PROJECT_NAME}_dog
        ${SOURCE}
        )

target_link_libraries(${PROJECT_NAME}_dog
        ${catkin_LIBRARIES}
        )
