<?xml version="1.0"?>
<package format="2">
    <name>legged_sirius_description</name>
    <version>0.0.0</version>
    <description>Sirus robot description files</description>
    <maintainer email="yuexiaoxuesheng@gamil.com">lz</maintainer>
    <license>BSD</license>
    <author email="yuexiaoxuesheng@gamil.com">lz</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>

</package>
